schema/testdata/validation_expression_literal_string_in_literal_array/schema.keel
model Post {
  @permission(
    expression: "bob" in [1, 2],
    actions: [get]
  )
}
