schema/testdata/errors/permission_attribute_action_as_actiontype_arg.keel
model Person {
    actions {
        get getPerson(id)
    }

    @permission(
        expression: true,
        //expect-error:19:28:AttributeArgumentError:getPerson is not a valid action type
        actions: [getPerson]
    )
}
